--- a/app/assets/styles/base/_global.css
+++ b/app/assets/styles/base/_global.css
@@ -1,4 +1,10 @@
-body{
 
+body{
+    font-family: 'Open Sans', 'HelveticaNeue', 'Helvetica Neue', Helvetica, Arial, sans-serif;
+    color: #333;
 }
 
+img {
+    max-width: 100%;
+    height: auto;
+}
