--- a/app/assets/styles/modules/_banner.css
+++ b/app/assets/styles/modules/_banner.css
@@ -1,5 +1,34 @@
 .banner {
     position: relative; 
-   color: red;
-   width: 100%;
+
+   &__text-content {
+       background-color: rgba(0,0,0,0.5);
+       transform: translateY(-50%);
+       position: absolute;
+       top: 50%;
+       left: 0;
+       width: 100%;
+       text-align:center;
+   }
+
+
+   &__title{
+       font-weight: 300;
+       color: #FFF;
+      font-size: 4.8rem;
+      margin:0;
+   }
+
+   &__subtitle{
+    font-weight: 200;
+    color: #FFF;
+    font-size: 2.9rem;
+    margin: 0;
+
+   }
+
+   &__description{
+       font-size: 1.5rem;
+       color: #FFF;
+   }
 }
