--- a/app/assets/styles/styles.css
+++ b/app/assets/styles/styles.css
@@ -1,3 +1,6 @@
 @import "normalize.css";
 @import "base/_global";
+@import "base/_variables";
 @import "modules/_banner";
+@import "modules/_btn";
+/* @import "modules/_cool-btn"; */
