--- a/app/assets/styles/styles.css
+++ b/app/assets/styles/styles.css
@@ -1,6 +1,7 @@
 @import "normalize.css";
 @import "base/_global";
 @import "base/_variables";
+@import "base/_mixins";
 @import "modules/_banner";
 @import "modules/_btn";
 /* @import "modules/_cool-btn"; */
