--- a/app/assets/styles/modules/_btn.css
+++ b/app/assets/styles/modules/_btn.css
@@ -4,4 +4,12 @@
     text-decoration: none;
     padding: .75rem 1.2rem;
     display:inline-block;
+
+    &__large {
+        padding: 1.1rem 1.9rem;
+
+    @mixin atSmall {
+      font-size: 1.25rem;
+      }
+    }
 }
