--- a/app/assets/styles/modules/_wrapper.css
+++ b/app/assets/styles/modules/_wrapper.css
@@ -1,10 +1,24 @@
 .wrapper {
+    /* background-color: green; */
+    overflow: hidden;
     padding-left:18px;
     padding-right:18px;
+    max-width: 1200px;
+    margin-left: auto;
+    margin-right: auto;
 
     &__banner {
         height: 100%;
         width: auto;
         padding: 10px
+    }
+
+    &--medium {
+        max-width: 976px;
+    }
+
+    .wrapper {
+        padding-left: 0;
+        padding-right: 0;
     }
 }
