--- a/app/assets/styles/styles.css
+++ b/app/assets/styles/styles.css
@@ -5,4 +5,8 @@
 @import "modules/_banner";
 @import "modules/_btn";
 /* @import "modules/_cool-btn"; */
-@import "modules/_wrapper"
+@import "modules/_wrapper";
+@import "modules/_page-section";
+@import "modules/_icons";
+@import "modules/_headline";
+@import "modules/_row";
