--- a/app/assets/styles/modules/_wrapper.css
+++ b/app/assets/styles/modules/_wrapper.css
@@ -1,11 +1,16 @@
 .wrapper {
-    /* background-color: green; */
+
     overflow: hidden;
     padding-left:18px;
     padding-right:18px;
-    max-width: 1200px;
+    max-width: 1236px;
     margin-left: auto;
     margin-right: auto;
+
+    @mixin atMedium{
+        padding-left: 3.5rem;
+        padding-right:3.5rem;
+    }
 
     &__banner {
         height: 100%;
@@ -15,10 +20,21 @@
 
     &--medium {
         max-width: 976px;
+
+      
     }
 
     .wrapper {
         padding-left: 0;
         padding-right: 0;
+    }
+
+    &--b-margin {
+        margin-bottom: 1rem;
+        
+        @mixin atSmall {
+            margin-bottom:3.8rem;
+            
+        } 
     }
 }
