--- a/app/assets/styles/modules/_headline.css
+++ b/app/assets/styles/modules/_headline.css
@@ -4,7 +4,7 @@
     font-size:1.9rem;
 
     @mixin atMedium {
-        font-size: 2.875rem;
+        font-size: 1.872rem;
 
     }
 
@@ -45,7 +45,12 @@
         margin-bottom: 1.6em;
     }
 
-    &--drop-cap {
+    &--no-t-margin {
+        margin-top: 0;
+    }
+
+    /* drop cap** */
+    /* &--drop-cap {
         float:left;
         font-family: georgia;
         font-size: 75px;
@@ -54,6 +59,6 @@
         padding-right: 8px;
         padding-left: 3px;
 
-    }
+    } */
 
 }
