--- a/app/assets/styles/styles.css
+++ b/app/assets/styles/styles.css
@@ -1,7 +1,7 @@
 @import "normalize.css";
-@import "base/_global";
 @import "base/_variables";
 @import "base/_mixins";
+@import "base/_global";
 @import "modules/_banner";
 @import "modules/_btn";
 /* @import "modules/_cool-btn"; */
@@ -10,3 +10,4 @@
 @import "modules/_icons";
 @import "modules/_headline";
 @import "modules/_row";
+@import "modules/_generic-content-container";
