--- a/app/assets/styles/modules/_icons.css
+++ b/app/assets/styles/modules/_icons.css
@@ -1,8 +1,9 @@
 .icons {
     max-width: 40px;
     background-color: $mainYellow;
-    padding: 4px;
-    border-radius:15px;   
+    padding: 8px;
+    border-width:thin;
+    border-radius:10px;   
 
     &__bigger {
         padding: 6.5px;
