--- a/app/assets/styles/modules/_row.css
+++ b/app/assets/styles/modules/_row.css
@@ -1,10 +1,17 @@
 .row {
+    font-size: 1rem;
+    font-weight: 200;
+    
 
 
     @mixin clearfix; 
 
     &--gutters {
-        margin-right: -65px
+        margin-right: -65px;
+    }
+
+    &--gutters-large {
+        margin-right: -45px;
     }
 
     &--gutters > div {
@@ -15,6 +22,10 @@
         }
     }
 
+    &--gutters-large > div {
+        padding-right: 45px;
+    }
+
     &__b-margin-until-medium {
         margin-bottom: 1rem;
 
@@ -23,29 +34,49 @@
         }
     }
 
+    &__smaller-font {
+        font-weight: 200;
+    }
+
 
     @mixin atMedium{
+
+        @__medium-3 {
+            float: left;
+            width: 25%;
+        }
         
-                &__medium-4 {
-                    float: left;
-                    width: 33.33%;
-                }
+        &__medium-4 {
+            float: left;
+            width: 33.33%;
+        }
 
-                &__medium-4--larger{
-                    width: 37%;
-                }
-                
-                
-                &__medium-8 {
-                    float:left;
-                    width:66.66%;
-                }
+        &__medium-4--larger{
+            width: 37%;
+        }
 
-                &__medium-8--smaller{
-                    width: 63%
-                }
-            
+        &__medium-6{
+            float:left;
+            width: 50%;
+        }
+        
+        
+        &__medium-8 {
+            float:left;
+            width:66.66%;
+        }
 
+        &__medium-8--smaller{
+            width: 63%
+        }            
+
+    }
+
+    @mixin atLarge {
+        &__large-3 {
+            float: left;
+            width: 25%;
+        }
     }
         
 }
