completed the members sectin

--- a/app/assets/styles/modules/_section-title.css
+++ b/app/assets/styles/modules/_section-title.css
@@ -17,6 +17,11 @@
 
     }
 
+    &--dark {
+        color: $mainRed;
+        font-weight: 350;
+    }
+
     @mixin atSmall {
         font-size: 2.25rem;
     }
