--- a/app/assets/styles/modules/_page-section.css
+++ b/app/assets/styles/modules/_page-section.css
@@ -7,8 +7,39 @@
 
     }
 
+    &--no-b-padding-until-medium {
+        padding-bottom:0;
+
+        @mixin atMedium {
+            padding-bottom: 4.5rem;
+        }
+    }
+
+    &--no-b-padding-until-large {
+
+        padding-bottom:0;
+
+        @mixin atLarge {
+            padding-bottom: 4.5rem;
+        }
+
+    }
+
+
+
     &__red {
         background-color: $mainRed;
         color: #FFF;
+    }
+
+    &--members {
+
+        background-color: #a49b94;
+
+        @mixin atMedium {
+            
+            background:url('/assets/images/background-white.jpg') top center no-repeat;
+            background-size: cover;
+        }
     }
 }
