--- a/app/assets/styles/modules/_row.css
+++ b/app/assets/styles/modules/_row.css
@@ -6,8 +6,16 @@
 
     @mixin clearfix; 
 
+    &--t-padding {
+        padding-top: 80px;
+    }
+
     &--gutters {
         margin-right: -65px;
+    }
+
+    &--gutters-small {
+        margin-right:  -25px;
     }
 
     &--gutters-large {
@@ -20,6 +28,10 @@
         @mixin atSmall{
             padding-right: 30px;
         }
+    }
+
+    &--gutters-small > div {
+        padding-right: 25px;
     }
 
     &--gutters-large > div {
@@ -41,7 +53,7 @@
 
     @mixin atMedium{
 
-        @__medium-3 {
+        &__medium-3 {
             float: left;
             width: 25%;
         }
@@ -52,6 +64,7 @@
         }
 
         &__medium-4--larger{
+            float: left;
             width: 37%;
         }
 
@@ -67,16 +80,75 @@
         }
 
         &__medium-8--smaller{
+            float: left;
             width: 63%
         }            
 
     }
 
-    @mixin atLarge {
+
+    @mixin atLarge{
+
         &__large-3 {
             float: left;
             width: 25%;
         }
+        
+        &__large-4 {
+            float: left;
+            width: 33.33%;
+        }
+
+        &__large-4--larger{
+            float: left;
+            width: 37%;
+        }
+
+        &__large-6{
+            float:left;
+            width: 50%;
+        }
+        
+        
+        &__large-8 {
+            float:left;
+            width:66.66%;
+        }
+
+        &__large-8--smaller{
+            float: left;
+            width: 63%
+        }            
+
     }
+
+
+
+
+
+    /* begin equal height rules */
+
+    &--equal-height-at-medium {
+        @mixin atMedium {
+            display: flex;
+        }
+
+        & > div {
+            float: none;
+            display:flex;
+        }
+    }
+
+    &--equal-height-at-large {
+        @mixin atLarge {
+            display: flex;
+        }
+
+        & > div {
+            float: none;
+            display:flex;
+        }
+    }
+      
         
 }
