--- a/app/assets/styles/modules/_btn.css
+++ b/app/assets/styles/modules/_btn.css
@@ -5,6 +5,10 @@
     padding: .75rem 1.2rem;
     display:inline-block;
 
+    &__yellow {
+        background-color:$mainYellow;
+    }
+
     &__large {
         padding: 1.1rem 1.9rem;
 
