mainYellow changed to mainBlue. header not complte

--- a/app/assets/styles/modules/_btn.css
+++ b/app/assets/styles/modules/_btn.css
@@ -6,7 +6,7 @@
     display:inline-block;
 
     &__yellow {
-        background-color:$mainYellow;
+        background-color:$mainBlue;
     }
 
     &__large {
