--- a/app/assets/styles/modules/_headline.css
+++ b/app/assets/styles/modules/_headline.css
@@ -16,7 +16,8 @@
     }
 
     &--yellow {
-        color: $mainYellow;
+        color: $mainBlue;
+        text-shadow: 1px 1px 0 rgba(0,0,0,.5)
     }
 
     &--small {
