--- a/app/assets/styles/modules/_icons.css
+++ b/app/assets/styles/modules/_icons.css
@@ -1,6 +1,6 @@
 .icons {
     max-width: 40px;
-    background-color: $mainYellow;
+    background-color: $mainBlue;
     padding: 8px;
     border-width:thin;
     border-radius:10px;   
