--- a/app/assets/styles/modules/_members.css
+++ b/app/assets/styles/modules/_members.css
@@ -41,11 +41,12 @@
     }
 
     &__subtitle {
-        color: $mainYellow;
+        color: $mainBlue;
         text-align: center;
         font-weight: 400;
         font-size: 1rem;
         margin: .3rem 0 1rem;
+        text-shadow: 1px 1px 0 rgba(0,0,0,.5);
 
         @mixin atMedium {
             font-size: 1.25rem;
