--- a/app/assets/styles/modules/_banner.css
+++ b/app/assets/styles/modules/_banner.css
@@ -7,7 +7,7 @@
     }
 
    &__text-content {
-       background-color: rgba(0,0,0, 0.5);
+       background-color: rgba(0,0,0, 0.6);
        transform: translateY(-50%);
        position: absolute;
        top: 50%;
@@ -65,7 +65,7 @@
 
    &__description{
     border: none;   
-    color: #FFF;
+    color:$mainBlue;
     font-size: 1rem;
     font-weight: 100;
     text-shadow: 2px 2px 0 rgba(0,0,0,.1);
