--- a/app/assets/styles/modules/_primary-nav.css
+++ b/app/assets/styles/modules/_primary-nav.css
@@ -17,9 +17,11 @@
 
 
     a{
-        color:#FFF;
-        font-weight: 300;
+        color:$mainRed;
+        font-weight: 500;
         text-decoration: none;
+        display:block;
+        padding:12px 0;
     }
 
 
