--- a/app/assets/styles/modules/_banner.css
+++ b/app/assets/styles/modules/_banner.css
@@ -1,4 +1,6 @@
 .banner {
+
+    /* background-color: rgba(0,0,0, 0.6); */
     border-bottom: 10px solid $mainRed;
     position: relative; 
 
@@ -7,14 +9,22 @@
     }
 
    &__text-content {
-       background-color: rgba(0,0,0, 0.6);
+       padding-top: 90px;
+       /* margin-top:-6.5px; */      
        transform: translateY(-50%);
        position: absolute;
        top: 50%;
        left: 0;
        width: 100%;
        text-align:center;
-       padding: 1.5rem 0 0;
+       /* padding: 1.5rem 0 0; */
+       background-color: rgba(0,0,0, 0.6);
+
+    
+
+       @mixin atMedium {
+           padding-top:60px;
+       }
 
        @mixin atLarge{
            padding: 4rem 0 0;
@@ -76,6 +86,7 @@
 
    @mixin atSmall {
        font-size: 1.3rem;
+       padding-top:60px;
    }
 
    @mixin atMedium {
