--- a/app/assets/styles/modules/_call-us.css
+++ b/app/assets/styles/modules/_call-us.css
@@ -14,8 +14,9 @@
         padding:0;
         @mixin clearfix;
     }
-
-    li{
+    
+    li{ 
+        /* text-align: center; */
         list-style: none;
         float:left;
         padding-right:20px;
