--- a/app/assets/styles/modules/_site-header.css
+++ b/app/assets/styles/modules/_site-header.css
@@ -51,16 +51,19 @@
         z-index: 10;
         top: 15px;
         right:35px;
-        background-color: $mainRed;
+        /* background-color: $mainRed; */
         
 
-        &__top {
+        &::before {
+            content:"";
             position: absolute;
             top:0;
             left:0;
             width:40px;
             height:5px;
             background-color:#FFF;
+            transform-origin:0 0;
+            transition: transform .3s ease-out;
         }
         &__middle {
             position: absolute;
@@ -69,18 +72,38 @@
             width:40px;
             height:5px;
             background-color:#FFF;
+            transition: all .3s ease-out;
+            transform-origin:0 50%;
         }
-        &__bottom {
+        &::after {
+            content:"";
             position: absolute;
             bottom:0;
             left:0;
             width:40px;
             height:5px;
             background-color:#FFF;
+            transform-origin: 0 100%;
+            transition: transform .3s ease-out;
         }
 
         @mixin atMedium {
             display: none;
+        }
+    }
+
+    &__menu-icon--close-x {
+        &::before{
+            transform:rotate(45deg) scaleX(1.25);
+        }
+
+        .site-header__menu-icon__middle {
+            opacity:0;
+            transform: scaleX(0);
+        }
+
+        &::after {
+            transform:rotate(-45deg) scaleX(1.20) translateY(4px); ;
         }
     }
 
