--- a/app/assets/styles/modules/_site-header.css
+++ b/app/assets/styles/modules/_site-header.css
@@ -11,34 +11,67 @@
         background-color:$mainBlue; 
     }
 
+
+
     
     
 
     
     @mixin atMedium {
+        position: fixed;
         padding:10px;
         background-color:rgba($mainBlue,.7);
+
+        /* &--sticky{
+            position:fixed;
+            top:0;
+            width:100%;
+
+        } */
+
+        &--dark{
+            background-color: $mainBlue;
+        }
+
     }
 
     &__btn-container {
         float: right;
     }
 
+    /* &__img {
+        @mixin atMedium {
+            transform:translateX(0);
+            left: auto;
+            
+            .site-header--dark & {
+                transform: scale(.57);
+            }
+
+        }
+    } */
+
     &__logo {
         position:absolute;
         top:0;
         background-color: $mainBlue;
-        padding: 5px;
+        /* padding: 5px; */
         /* border-radius: 20px; */
         
         /* to center the logo */
         left: 50%;
         transform : translateX(-50%) scale(.8);
+        transition:transform .3s ease-out;
         transform-origin: 50% 0%;
 
         @mixin atMedium {
+            transform:translateX(0);
             left: auto;
-            transform:translateX(0)
+            
+            .site-header--dark & {
+                transform: scale(.50);
+            }
+
         }
 
     }
