--- a/app/assets/styles/modules/_primary-nav.css
+++ b/app/assets/styles/modules/_primary-nav.css
@@ -4,8 +4,6 @@
         float: right;
     }
 
-    
-
     ul {
         margin:0;
         padding:0;
@@ -17,33 +15,58 @@
         list-style: none;
         text-align: center;
         /* margin-right:-18px; */
-        
-        /* left: 50%; */
-        /* transform : translateX(-70%) ;
-        transform-origin: 50% 0%; */
-
 
 
         @mixin atMedium {
             float:left;
             padding-right:20px;
+
+
         }
     }
 
+    &__active {
+        background-color: $mainRed;
+        color: #FFF;
 
-    a{
-        color:$mainRed;
-        font-weight: 500;
-        text-decoration: none;
-        display:block;
-        padding:12px 0;
-        transition: color 0.1s, background-color 0.1s;
     }
 
-    a:hover, a:focus, a:active {
+    a{  
+        color: #FFF;
+        font-weight: 300;
+        text-decoration: none;
+        text-shadow: 1px 1px 1px $mainRed;
+        display:block;
+        padding:15px 0;
+        transition: all 0.4s, background-color 0.3s;
+
+        @mixin atMedium {
+            padding-left: 5px;
+            padding-right: 5px;
+        }
+
+        @mixin atLarge {
+            padding-left: 10px;
+            padding-right: 10px;
+        }
+
+
+    }
+
+
+    a:hover {
+        background-color: $mainRed;
+        color:#FFF;
+        border-radius: 10px;
+
+
+
+    }
+
+    /* a:hover, a:focus, a:active {
         color: #FFF;
         text-decoration: none;
-    }
+    } */
 
 
 
