--- a/app/assets/styles/modules/_headline.css
+++ b/app/assets/styles/modules/_headline.css
@@ -5,6 +5,7 @@
 
 
 
+
     @mixin atMedium {
         font-size: 2.875rem;
 
@@ -13,6 +14,14 @@
     
     &--centered {
         text-align: center;
+
+    }
+
+    &--centered-only-smaller {
+        text-align: center;
+        @mixin atMedium {
+            text-align: left;
+        }
     }
 
     &--yellow {
@@ -23,6 +32,7 @@
     &--small {
 
         font-size: 1.2rem;
+        font-weight:350;
 
         @mixin atMedium{
             font-size: 1.875rem;
