--- a/app/assets/styles/modules/_primary-nav.css
+++ b/app/assets/styles/modules/_primary-nav.css
@@ -11,7 +11,7 @@
     }
     
     li{
-        left: 50%;
+        left: 60%;
         list-style: none;
         text-align: center;
         /* margin-right:-18px; */
@@ -19,27 +19,40 @@
 
         @mixin atMedium {
             float:left;
-            padding-right:20px;
-
-
+            padding-right:15px;
+            
+            
         }
     }
-
+    
     &__active {
-        background-color: $mainRed;
         color: #FFF;
+        border-bottom: 3px solid $mainRed;
+     
+        
+    }
+    
+    a:hover, a:focus, a:active {
+        color:#FFF;
+        text-decoration:none;
+    }
+
+    a{
+        transition: color 0.1s, background-color 0.1s;
 
     }
 
     a{  
-        color: #FFF;
-        font-weight: 300;
-        text-decoration: none;
-        text-shadow: 1px 1px 1px $mainRed;
+        position:relative;
         display:block;
-        padding:15px 0;
-        transition: all 0.4s, background-color 0.3s;
-
+        padding:10px 0;
+        font-weight: 400;
+        text-decoration: none;
+        /* text-shadow: 1px 1px 1px $mainRed; */
+        text-transform:uppercase;
+        transition: color 0.4s, background-color 0.3s padding 0.2s ease-in; 
+        color: $mainRed;
+        
         @mixin atMedium {
             padding-left: 5px;
             padding-right: 5px;
@@ -48,24 +61,33 @@
         @mixin atLarge {
             padding-left: 10px;
             padding-right: 10px;
-        }
-
+        }      
 
     }
 
-
-    a:hover, a:active {
+    a::before {
+        content:"";
+        display:block;
+        position: absolute;
+        bottom: -2.5px;
+        left:0;
+        height:3px;
+        width:100%;
         background-color: $mainRed;
-        color:#FFF;
-        border-radius: 10px
+        transform-origin: right top;
+        transform: scale(0, 1);
+        transition: color 0.1s,transform 0.2s ease-out;
+
     }
 
-    
+    a:active::before {
+        background-color: $mainRed;
+    }
 
-    /* a:hover, a:focus, a:active {
-        color: #FFF;
-        text-decoration: none;
-    } */
+    a:hover::before, a:focus::before {
+        transform-origin: left top;
+        transform: scale(1, 1);
+    }
 
 
 
