--- a/app/assets/styles/modules/_section-title.css
+++ b/app/assets/styles/modules/_section-title.css
@@ -22,6 +22,19 @@
         font-weight: 350;
     }
 
+    &--light {
+        color: $mainBlue;
+        font-weight: 350;
+    }
+
+    &--background-color {
+        /* background-color: rgba(255,255,255,.4) */
+    }
+
+    &--no-b-padding {
+        padding-bottom: 0;
+    }
+
     @mixin atSmall {
         font-size: 2.25rem;
     }
