--- a/app/assets/styles/modules/_site-header.css
+++ b/app/assets/styles/modules/_site-header.css
@@ -82,9 +82,10 @@
         height: 35px;
         position: absolute;
         z-index: 10;
-        top: 13px;
+        top: 20px;
         right:35px;
-        /* background-color: $mainRed; */
+        cursor: pointer;
+        transition: color .3s ease-out;
         
 
         &::before {
