--- a/app/assets/styles/modules/_form.css
+++ b/app/assets/styles/modules/_form.css
@@ -1,7 +1,8 @@
 .form {
+
  
     &__wrapper {
-        background:#fff;
+        background:rgba(255,255,255,.9);
         width:100%;
         max-width:100%;
         box-sizing:border-box;
