--- a/app/assets/styles/styles.css
+++ b/app/assets/styles/styles.css
@@ -17,8 +17,10 @@
 @import "modules/_site-footer";
 @import "modules/_site-header";
 @import "modules/_main-logo";
-@import "modules/_primary-nav";
+/* @import "modules/_primary-nav"; */
 @import "modules/_call-us";
 @import "modules/_reveal-item";
 @import "modules/_form";
 @import "modules/_portfolio";
+/* navbar test */
+@import "modules/_navbar";
