--- a/app/assets/styles/modules/_site-header.css
+++ b/app/assets/styles/modules/_site-header.css
@@ -8,7 +8,7 @@
      
 
     &--is-expanded {
-        background-color:$mainBlue; 
+        background-color: rgba($mainBlue,.9); 
     }
 
 
@@ -48,6 +48,7 @@
     &__logo {
         position:absolute;
         top:0;
+        left:50%;
         background-color: $mainBlue;
         padding: 3.2px;
         /* border-radius: 20px; */
@@ -63,7 +64,7 @@
             left: auto;
             
             .site-header--dark & {
-                transform: scale(.42);
+                transform: scale(.40);
             }
 
         }
@@ -72,12 +73,12 @@
 
 
     &__menu-icon {
-        width:40px;
-        height: 35px;
+        width:20px;
+        height: 19px;
         position: absolute;
         z-index: 10;
-        top: 20px;
-        right:35px;
+        top: 18px;
+        right:10px;
         cursor: pointer;
         transition: color .3s ease-out;
         
@@ -87,18 +88,18 @@
             position: absolute;
             top:0;
             left:0;
-            width:40px;
-            height:5px;
+            width:20px;
+            height:3px;
             background-color:#FFF;
             transform-origin:0 0;
             transition: transform .3s ease-out;
         }
         &__middle {
             position: absolute;
-            top:15px;
+            top:8px;
             left:0;
-            width:40px;
-            height:5px;
+            width:20px;
+            height:3px;
             background-color:#FFF;
             transition: all .3s ease-out;
             transform-origin:0 50%;
@@ -108,8 +109,8 @@
             position: absolute;
             bottom:0;
             left:0;
-            width:40px;
-            height:5px;
+            width:20px;
+            height:3px;
             background-color:#FFF;
             transform-origin: 0 100%;
             transition: transform .3s ease-out;
@@ -131,7 +132,7 @@
         }
 
         &::after {
-            transform:rotate(-45deg) scaleX(1.20) translateY(4px); ;
+            transform:rotate(-45deg) scaleX(1.25) translateY(1px); ;
         }
     }
 
@@ -142,7 +143,7 @@
         opacity:0;
         transform: scale(2);
         transition: all .3 ease-out;
-        position: relative;
+        /* position: relative; */
         z-index:-10;
         padding-top:55px;
         /* float: left; */
