--- a/app/assets/styles/modules/_portfolio.css
+++ b/app/assets/styles/modules/_portfolio.css
@@ -6,44 +6,29 @@
     /* line-height: 1.65rem; */
     font-weight: 300;
     font-size: 1.2rem;
-
-
-
-    &__row:after {
-         content: "";
-        display: table;
-        clear: both;
-    }
-
-
-    &__column {
-        float:left;
-        width:25%;       
-
-    }
-
- 
-    &__lightbox {
-        width:25%;
-        display: inline-block;
-    }
-
-
+    position:relative;
 
     
 
+
+
+
     @mixin atMedium {
-        margin-bottom: 0;
-        padding: 10px 1.8rem 10px 1.8rem;
-        margin-bottom: 40px;
-        line-height: 2rem;
-        font-size: 1.3rem;
-        
 
-    }
+        &__half {
+            width:47%;
+            float:left;
+            margin-bottom: 0;
+            padding: 10px 1.8rem 10px 1.8rem;
+            margin-bottom: 40px;
+            line-height: 2rem;
+            font-size: 1.3rem;          
+            
+        }
 
-    &--last {
-        /* margin-bottom: 0; */
+        &__last {
+            margin-left:6%;
+        }
 
     }
 
@@ -81,6 +66,6 @@
         }
     }
 
+}
    
 
-}
