--- a/app/assets/styles/modules/_wrapper.css
+++ b/app/assets/styles/modules/_wrapper.css
@@ -24,6 +24,17 @@
       
     }
 
+    &--no-padding-until-medium-portfolio {
+        padding-left:0;
+        padding-right:0;
+
+        @mixin atMedium {
+            padding-left:50px;
+            padding-right:50px;
+        }
+    }
+
+
     &--no-padding-until-medium {
         padding-left:0;
         padding-right:0;
