--- a/app/assets/styles/modules/_portfolio.css
+++ b/app/assets/styles/modules/_portfolio.css
@@ -8,6 +8,20 @@
     font-size: 1.2rem;
     position:relative;
 
+    &__gallery {
+        /* overflow:hidden; */
+        /* padding-bottom:2px; */
+        /* clear:both; */
+        /* display:block; */
+    }
+
+    &__gallery-thumb img {
+        max-width:23%;
+
+    }
+
+
+
     
 
 
@@ -20,6 +34,8 @@
             float:left;
             margin-bottom: 0;
             padding: 10px 1.8rem 10px 1.8rem;
+            margin-left:auto;
+            margin-right:auto;
             margin-bottom: 40px;
             line-height: 2rem;
             font-size: 1.3rem;          
