--- a/app/assets/styles/modules/_page-section.css
+++ b/app/assets/styles/modules/_page-section.css
@@ -43,7 +43,7 @@
         }
     }
 
-    &--portfolio {
+    /* &--portfolio {
         background-color: #85715c;
         color: ;
 
@@ -52,7 +52,7 @@
             background:url('../../assets/images/wood-background.jpg') top center no-repeat;
             background-size: cover;
         }
-    }
+    } */
 
     &--contact {
         background-color: #909090;
