work thumbnail fixed

--- a/app/assets/styles/modules/_feature-item.css
+++ b/app/assets/styles/modules/_feature-item.css
@@ -1,6 +1,10 @@
 .feature-item {
     position: relative;
     padding-bottom: 2rem;
+
+    &--last {
+        padding-bottom: 0 ;
+    }
     
 
     @mixin atSmall {
