--- a/app/assets/styles/modules/_portfolio.css
+++ b/app/assets/styles/modules/_portfolio.css
@@ -32,17 +32,16 @@
     }
 
 
-    &__gallery {
-        /* overflow:hidden; */
-        /* padding-bottom:2px; */
-        /* clear:both; */
-        /* display:block; */
+    &__gallery-thumb {
+        margin-top:2px;
+        text-align: left;
+
     }
 
     &__gallery-thumb img {
-        max-width:23%;
-        padding:7px;
-        border: 1px solid rgba(163,159,159,.5);
+        max-width:24%;
+        /* padding:5px; */
+        /* border: 1px solid rgba(163,159,159,.5); */
         transition:1s;
 
     }
