--- a/app/assets/styles/modules/_page-section.css
+++ b/app/assets/styles/modules/_page-section.css
@@ -3,7 +3,7 @@
     padding:1.2rem 0;
 
     @mixin atMedium {
-        padding: 4.5rem 0;
+        padding: 2rem 0;
 
     }
 
@@ -28,7 +28,10 @@
 
 
     &__red {
-        background-color: $mainRed;
+        background-color: $tan;
+    }
+
+    &__red p {
         color: #FFF;
     }
 
