--- a/app/assets/styles/modules/_icons.css
+++ b/app/assets/styles/modules/_icons.css
@@ -1,6 +1,7 @@
 .icons {
     max-width: 40px;
     background-color: $mainBlue;
+    /* fill: $mainRed; */
     padding: 8px;
     border-width:thin;
     border-radius:10px;   
