--- a/app/assets/styles/modules/_members.css
+++ b/app/assets/styles/modules/_members.css
@@ -34,7 +34,7 @@
     }
 
     &__name {
-        color: $mainRed;
+        color: $charcoal;
         text-align: center;
         font-size:1.5rem;
         font-weight: 500;
@@ -42,12 +42,12 @@
     }
 
     &__subtitle {
-        color: $mainBlue;
+        color: $mainRed;
         text-align: center;
         font-weight: 400;
         font-size: 1rem;
         margin: .3rem 0 1rem;
-        text-shadow: 1px 1px 0 rgba(0,0,0,.5);
+        /* text-shadow: 1px 1px 0 rgba(0,0,0,.5); */
 
         @mixin atMedium {
             font-size: 1.25rem;
