--- a/app/assets/styles/modules/_site-footer.css
+++ b/app/assets/styles/modules/_site-footer.css
@@ -1,5 +1,5 @@
 .site-footer {
-    background-color: $mainRed; 
+    background-color: $charcoal; 
     color:#FFF;
     padding: .5rem 0;
     text-align: center;
