--- a/app/assets/styles/modules/_banner.css
+++ b/app/assets/styles/modules/_banner.css
@@ -92,12 +92,25 @@
    &__description{
     border: none;   
     color:$mainBlue;
-    font-size: 1.5rem;
+    font-size: 1rem;
     font-weight: 300;
     text-shadow: 2px 2px 0 rgba(0,0,0,.1);
     max-width: 50rem;
     margin-left: auto;
     margin-right: auto;
+
+    @mixin atSmall {
+        /* font-size: 1.3rem; */
+    }
+
+    @mixin atMedium {
+        font-size: 1rem;
+    }
+
+    @mixin atLarge {
+        font-size: 1.3rem;
+    }
+
 
    }
 
@@ -112,6 +125,6 @@
    }
 
    @mixin atLarge {
-       font-size: 2rem;
+       font-size: 3rem;
    }
 }
