--- a/app/assets/styles/modules/_banner.css
+++ b/app/assets/styles/modules/_banner.css
@@ -47,6 +47,38 @@
        }
 
     }
+
+    &__text-content-thanks {
+        margin-top: 10px;
+        padding-top: 10px;
+        /* margin-top:-6.5px; */      
+        transform: translateY(-50%);
+        position: absolute;
+        top: 50%;
+        left: 0;
+        width: 100%;
+        text-align:center;
+        /* padding: 1.5rem 0 0; */
+        /* background-color: rgba(0,0,0, 0.6); */
+ 
+        @mixin atSmall {
+            margin-top:0;
+            padding-top: 30px;
+        }
+ 
+     
+ 
+        @mixin atMedium {
+            padding-top:60px;
+        }
+ 
+        @mixin atLarge{
+            padding: 4rem 0 0;
+        }
+ 
+     }
+     
+     
     
     
     &__title{
