home page edited.  add animation later.

--- a/app/assets/styles/base/_variables.css
+++ b/app/assets/styles/base/_variables.css
@@ -1,5 +1,11 @@
 $mainRed: #a3273c;
-$mainGrey: #A9A9A9;
+$mainGrey: #909090;
 $mainBlue: #bbe1f4;
+$blueGrey:#e3ebf0;
+
+
+$blueDarker:#9cbccc;
 $tan: #a49b94;
 $charcoal: #373737;
+
+$dark: #4f626b
