--- a/app/assets/styles/modules/_headline.css
+++ b/app/assets/styles/modules/_headline.css
@@ -1,14 +1,18 @@
 .headline {
-    color: $charcoal;
-    font-weight: 200;
+    color: $dark;
+    font-weight: 300;
     font-size:1.9rem;
 
 
 
 
     @mixin atMedium {
-        font-size: 2.875rem;
+        font-size: 1.5rem;
 
+    }
+
+    @mixin atLarge {
+        font-size:2rem;
     }
 
     
