--- a/app/assets/styles/modules/_page-section.css
+++ b/app/assets/styles/modules/_page-section.css
@@ -2,8 +2,9 @@
 
     padding:1.2rem 0;
 
-    @mixin atMedium {
-        padding: 2rem 0;
+    
+    @mixin atSmall {
+        padding: 3rem 0;
 
     }
 
@@ -27,8 +28,8 @@
 
 
 
-    &__red {
-        background-color: $tan;
+    &__dark {
+        background-color: $dark;
     }
 
     &__red p {
