--- a/app/assets/styles/modules/_page-section.css
+++ b/app/assets/styles/modules/_page-section.css
@@ -1,6 +1,6 @@
 .page-section {
 
-    padding:1.2rem 0;
+    padding:2.5rem 0;
 
     
     @mixin atSmall {
@@ -38,13 +38,13 @@
 
     &--members {
 
-        background-color: #a49b94;
+        background-color: #f9f9f9;
 
-        @mixin atMedium {
+        /* @mixin atMedium {
             
             background:url('../../assets/images/background-white.jpg') top center no-repeat;
             background-size: cover;
-        }
+        } */
     }
 
     /* &--portfolio {
