--- a/app/assets/styles/modules/_members.css
+++ b/app/assets/styles/modules/_members.css
@@ -1,5 +1,5 @@
 .members {
-    background-color: rgba(255,255,255,.75);
+    background-color: #fff;
     padding: 0 18px 0 18px;
     margin-bottom: 98px;
     line-height: 1.65rem;
@@ -12,7 +12,7 @@
         padding: 0 1.8rem 1px 1.8rem;
         margin-bottom: 98px;
         line-height: 2rem;
-        font-size: 1.3rem;
+        font-size: .9rem;
         
 
     }
