--- a/app/assets/styles/modules/_page-section.css
+++ b/app/assets/styles/modules/_page-section.css
@@ -38,13 +38,14 @@
 
     &--members {
 
-        background-color: #f9f9f9;
+        /* background-color: #f9f9f9; */
+        background-color: $tanish;
 
-        /* @mixin atMedium {
+        @mixin atMedium {
             
             background:url('../../assets/images/background-white.jpg') top center no-repeat;
             background-size: cover;
-        } */
+        }
     }
 
     /* &--portfolio {
