--- a/app/assets/styles/modules/_row.css
+++ b/app/assets/styles/modules/_row.css
@@ -95,6 +95,7 @@
         }
         
         &__large-4 {
+            /* line-height: .5px; */
             float: left;
             width: 33.33%;
         }
@@ -111,7 +112,9 @@
         
         
         &__large-8 {
-            float:left;
+            margin-left: auto;
+            margin-right:auto;
+            /* float:left; */
             width:66.66%;
         }
 
