--- a/app/assets/styles/modules/_banner.css
+++ b/app/assets/styles/modules/_banner.css
@@ -1,7 +1,7 @@
 .banner {
 
-    border-top: 22px solid $mainBlue;
-    border-bottom: 10px solid $charcoal;
+    border-top: 73px solid $mainBlue;
+    border-bottom: 10px solid $black;
     position: relative;
     background-color:$mainBlue; 
 
