--- a/app/assets/styles/modules/_form.css
+++ b/app/assets/styles/modules/_form.css
@@ -26,7 +26,7 @@
     &__text {
         border: none;   
         color:$charcoal;
-        font-size: .8rem;
+        font-size: 1rem;
         font-weight: 300;
         max-width: 50rem;
         margin-left: auto;
