--- a/app/assets/styles/modules/_icons.css
+++ b/app/assets/styles/modules/_icons.css
@@ -10,4 +10,18 @@
         padding: 6.5px;
     }
 
+    &--circle{
+        color:#fff;
+        border-radius: 50%;
+        margin: 0.15em;
+        background-color:$dark;
+        padding: 0.04em 0.3em;
+        font-size: 2em;
+        transition:all .3s ease-out;
+    }
+
+    &--circle:hover{
+        background-color:$mainGrey;
+    }
+
 }
