--- a/app/assets/styles/modules/_site-footer.css
+++ b/app/assets/styles/modules/_site-footer.css
@@ -2,6 +2,21 @@
     background-color: $mainRed; 
     padding: .5rem ;
     text-align: center;
+
+    
+
+
+    &--ara {
+        font-size: .6em;
+        text-transform: uppercase;
+    }
+    
+    &--ara a{
+        color:$mainGrey;
+        /* transition:all .3s ease-out; */
+    } 
+        
+
     
     &__text {
         color:#FFF;
