--- a/app/assets/styles/modules/_site-header.css
+++ b/app/assets/styles/modules/_site-header.css
@@ -8,7 +8,7 @@
      
 
     &--is-expanded {
-        background-color: rgba($mainBlue,.9); 
+        background-color: rgba($mainBlue,1); 
     }
 
 
@@ -77,7 +77,7 @@
         height: 19px;
         position: absolute;
         z-index: 10;
-        top: 24px;
+        top: 17px;
         right:14px;
         cursor: pointer;
         transition: color .3s ease-out;
