--- a/app/assets/styles/modules/_portfolio.css
+++ b/app/assets/styles/modules/_portfolio.css
@@ -85,12 +85,13 @@
         text-transform: uppercase;
         color: $charcoal;
         text-align: center;
-        font-size:1.4rem;
+        font-size:1.3rem;
         font-weight: 300;
         margin:0;
         padding-bottom:5px;
 
         @mixin atMedium {
+            /* font-size: 1.3em; */
             padding:0;
         }
 
